tests/macros/missing/name.stderr
error: missing required option `name`
 --> $DIR/name.rs:2:35
  |
2 |     inquisition::questions![input {}];
  |                                   ^^
