tests/macros/missing/name.rs
fn main() {
    inquisition::questions![input {}];
}
